--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome</h1>
 
 
 
@@ -14,6 +13,7 @@
 
 
 
-    <script src="./app.js"></script>
+
+    <script src="./app2.js"></script>
 </body>
 </html>
